# ffcast

./: .gitignore  Cargo.toml  README.md
src/: ffjob.rs  lib.rs  playlist.rs  segment.rs  transcode_store.rs  transcode_task.rs
tests/: ffmpg_cmdline.rs  transcode_store_tests.rs  transcode_task_tests.rs
