[package]
name = "ffcast"
version = "0.1.0"
authors = ["0n3z <zeno@pnyx.io>"]
edition = "2018"

[dependencies]
hyper = "0.12"
pretty_env_logger = "0.3"
futures = "0.1"
tokio-io = "0.1"
tokio-fs = "0.1"
rand = "0.7.2"
lazy_static = "1.4.0"

#[[test]]
#name = "ffmpg_cmdline"
#
#[[test]]
#name = "transcode_store_tests"

